--- a/docker/Dockerfile.base
+++ b/docker/Dockerfile.base
@@ -10,28 +10,16 @@ RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 # General
 RUN apt-get update && \
     apt-get install -y python3-pip cmake zlib1g-dev python3-tk \ 
-    # python-opencv \
     # Boost libraries
     libboost-all-dev \
     # Scipy requirements
     libblas-dev liblapack-dev libatlas-base-dev gfortran \
-    # Pygame requirements
-    libsdl-image1.2-dev libsdl-mixer1.2-dev libsdl-ttf2.0-dev libsdl1.2-dev libsdl2-dev \
-    #libsdl1.2-dev libsdl-image1.2-dev libsdl-mixer1.2-dev libsdl1.2-compat-dev libsdl-ttf2.0-dev \
-    libsmpeg-dev libportmidi-dev libavformat-dev libswscale-dev \
-    # Dashboard
     dpkg-dev build-essential libjpeg-dev  libtiff-dev libnotify-dev \
-    freeglut3 freeglut3-dev libsm-dev libgtk2.0-dev libgtk-3-dev \
-    #libwebkitgtk-dev libgtk-3-dev libwebkitgtk-3.0-dev \
-    libgstreamer-plugins-base1.0-dev \
-    # Gym
     ffmpeg swig cmake \
-    # Mujoco_py
-    curl libgl1-mesa-dev libgl1-mesa-glx libglew-dev libosmesa6-dev software-properties-common \
-    # ViZDoom
-    build-essential zlib1g-dev libjpeg-dev \
-    nasm tar libbz2-dev libgtk2.0-dev cmake git libfluidsynth-dev libgme-dev \
-    libopenal-dev timidity libwildmidi-dev unzip wget && \
+    curl software-properties-common \
+    build-essential \
+    nasm tar libbz2-dev libgtk2.0-dev cmake git \
+    unzip wget && \
     apt-get clean autoclean && \
     apt-get autoremove -y
 
